# mcp-discord-notifier

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/: AGENTS_MCP_DISCORD_NOTIFIER_SAMPLE.md  COMMANDS.md  DEPLOYMENT.md  MCP_CLIENT_SETUP.md  MCP_INTEGRATION_TEST.md  PROMPT_TEMPLATES.md  Sample.md  UNIFIED_STARTUP.md
scripts/: README.md  launch_all.sh  mcp-discord-notifier.service  start.sh  stop.sh
src/: __init__.py  __main__.py  bot_daemon.py  command_handler.py  discord_logger.py  mcp_server.py  settings.py  voicevox_client.py
test/: README.md  __init__.py  conftest.py  test_command_handler.py  test_discord_logger.py  test_integration.py  test_mcp_server.py  test_settings.py  test_voice.py  test_voice_persistent.py  test_voicevox_client.py
