[project]
name = "mcp-discord-notifier"
version = "0.1.0"
description = "Interactive MCP server for AI agents to communicate with users via Discord notifications"
authors = [
    { name = "t-syunya", email = "tsyunyam@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py[voice]>=2.6.4",
    "mcp[cli]>=1.19.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "PyNaCl>=1.5.0",
]

[project.scripts]
mcp-discord-notifier = "src.__main__:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
]
